# Otus_Server_RDB

./: CMakeLists.txt  Client.cpp  Client.h  Ditchr_Clients.h  Ditchr_Data.h  Ditchr_Requests.h  Ditchr_Responce.h  README.md  Server.h  a.cpp  a.out  main.cpp
.github/workflows/: Join_server.yml
.gitignore/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  join_server
.gitignore/build_windows/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  cmake_install.cmake
.gitignore/build_windows/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.write.1.tlog
.gitignore/build_windows/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog
.gitignore/build_windows/main.dir/Debug/main.tlog/: CL.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Client/: Client.cpp  a.out
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  main
build_windows/: 27.DB.sln  ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj.filters  main.vcxproj  main.vcxproj.filters
build_windows/Debug/: main.ilk
build_windows/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog
build_windows/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
build_windows/main.dir/Debug/main.tlog/: CL.read.1.tlog  CL.write.1.tlog  main.lastbuildstate
